started styling the app

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
+  color: $darkGrey;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $mSize;
+  line-height: 1.6;
 }
 
 button {
