--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,7 @@
 // Colors
+$darkGrey: #333;
+$aNiceBlue: #1c88bf;
+$moodyBlue: #364051;
 
 // Spacing
 $sSize: 1.2rem;
@@ -8,3 +11,6 @@ $xlSize: 4.8rem;
 
 // Breakpoint
 $desktop: 45rem;
+
+// Font Sizes
+$fontLarge: 1.8rem;
