finished styling the app and added a babel polyfill

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,9 @@
 // Colors
 $darkGrey: #333;
+$regularOldGrey: #666;
 $aNiceBlue: #1c88bf;
 $moodyBlue: #364051;
+$offWhite: #f7f7f7;
 
 // Spacing
 $sSize: 1.2rem;
@@ -14,3 +16,4 @@ $desktop: 45rem;
 
 // Font Sizes
 $fontLarge: 1.8rem;
+$fontSmall: 1.4rem;
